@@ -1,6 +1,6 @@
-from game.utils import print_welcome_messages
-from game.player import Player
-from game.game_loop import GameLoop
+from game.utilities.utils import print_welcome_messages
+from game.characters.player import Player
+from game.sequence_loops.game_loop import GameLoop
 
 
 class Game:
