@@ -1,7 +1,3 @@
-# MAYBE add a new game plus feature
-# as the player collects more zinders, make the game harder?
-
-
 class WorldStates:
     def __init__(self):
         pass
